Revert "MIFOS-5663 create views to import savings account"
This reverts commit 0951fee164b87d0287aa88cb8aaa8201d66ffc74.